fix scaling of nodes, grey out expand/collapse if not available

--- a/src/scripts/css/main.css
+++ b/src/scripts/css/main.css
@@ -26,16 +26,15 @@ svg .node-label {
   font-size: 18px !important; }
 
 .instruction-box {
-  z-index: 1;
   text-align: center;
   position: absolute;
-  top: 10%;
+  top: 13%;
   left: 50%;
   transform: translate(-50%, 0%); }
   .instruction-box h4 {
     color: #333333;
     font-family: 'Bitter', sans-serif;
-    font-size: 28px;
+    font-size: 24px;
     font-weight: bold; }
 
 .info-section {
